--- a/azure/templates/download-build-artifact.yml
+++ b/azure/templates/download-build-artifact.yml
@@ -11,15 +11,13 @@ parameters:
 steps:
   - download: none
   - bash: |
-      echo "${{ parameters.artifactBranch }}+${{ parameters.artifactBuildId }} Source $(Build.SourceBranch)"
       if [[ "${{ parameters.artifactBranch }}" =~ ^v ]];
       then
-        export BRANCH="tags";
+        export TYPE="tags";
       else
-        export BRANCH="heads";
+        export TYPE="heads";
       fi
-      echo "##vso[task.setvariable variable=GIT_BRANCH]$BRANCH";
-      echo $BRANCH
+      echo "##vso[task.setvariable variable=GIT_BRANCH_TYPE]$TYPE";
     displayName: Determine Artifact Location
   - task: DownloadPipelineArtifact@2
     displayName: 'Download Build Artifact'
@@ -36,5 +34,5 @@ steps:
       ${{ if eq(parameters.artifactBranch, '$(Build.SourceBranch)') }}:
         branchName: '$(Build.SourceBranch)'
       ${{ if ne(parameters.artifactBranch, '$(Build.SourceBranch)') }}:
-        branchName: 'refs/$(GIT_BRANCH)/${{ parameters.artifactBranch }}'
+        branchName: 'refs/$(GIT_BRANCH_TYPE)/${{ parameters.artifactBranch }}'
       downloadPath: '$(Pipeline.Workspace)/${{ parameters.serviceName }}'
