--- a/azure/templates/download-build-artifact.yml
+++ b/azure/templates/download-build-artifact.yml
@@ -18,6 +18,7 @@ steps:
         export TYPE="heads";
       fi
       echo "##vso[task.setvariable variable=GIT_BRANCH_TYPE]$TYPE";
+      echo "Retrieving Artifact from: $(GIT_BRANCH_TYPE)/${{ parameters.artifactBranch }} BuildId: ${{ parameters.artifactBuildId }}"
     displayName: Determine Artifact Location
   - task: DownloadPipelineArtifact@2
     displayName: 'Download Build Artifact'
