--- a/azure/templates/download-build-artifact.yml
+++ b/azure/templates/download-build-artifact.yml
@@ -21,7 +21,7 @@ steps:
 
       if [[ "${{ parameters.artifactBranch }}" =~ ^refs\/tags\/v ]];
       then
-        export ARTIFACT_BRANCH="master";
+        export ARTIFACT_BRANCH="ref/heads/master";
       else
         export ARTIFACT_BRANCH="${{ parameters.artifactBranch }}";
       fi
