--- a/azure/templates/download-build-artifact.yml
+++ b/azure/templates/download-build-artifact.yml
@@ -19,15 +19,15 @@ steps:
       fi
       echo "##vso[task.setvariable variable=GIT_BRANCH_TYPE]$TYPE";
 
-      if [[ "${{ parameters.artifactBranch }}" =~ ^refs\/tags\/v ]];
-      then
-        export ARTIFACT_BRANCH="refs/heads/master";
-      else
-        export ARTIFACT_BRANCH="${{ parameters.artifactBranch }}";
-      fi
-      echo "##vso[task.setvariable variable=ARTIFACT_BRANCH]$ARTIFACT_BRANCH";
+      # if [[ "${{ parameters.artifactBranch }}" =~ ^refs\/tags\/v ]];
+      # then
+      #   export ARTIFACT_BRANCH="refs/heads/master";
+      # else
+      #   export ARTIFACT_BRANCH="${{ parameters.artifactBranch }}";
+      # fi
+      # echo "##vso[task.setvariable variable=ARTIFACT_BRANCH]$ARTIFACT_BRANCH";
 
-      echo "Retrieving Artifact from: $ARTIFACT_BRANCH BuildId: ${{ parameters.artifactBuildId }}"
+      echo "Retrieving Artifact from: ${{ parameters.artifactBranch }} BuildId: ${{ parameters.artifactBuildId }}"
     displayName: Determine Artifact Location
   - task: DownloadPipelineArtifact@2
     displayName: 'Download Build Artifact'
@@ -41,8 +41,8 @@ steps:
       ${{ if ne(parameters.artifactBuildId, 'latest') }}:
         buildVersionToDownload: 'specific'
         runId: '${{ parameters.artifactBuildId }}'
-      ${{ if eq('$(ARTIFACT_BRANCH)', '$(Build.SourceBranch)') }}:
+      ${{ if eq('${{ parameters.artifactBranch }}', '$(Build.SourceBranch)') }}:
         branchName: '$(Build.SourceBranch)'
-      ${{ if ne('$(ARTIFACT_BRANCH)', '$(Build.SourceBranch)') }}:
+      ${{ if ne('${{ parameters.artifactBranch }}', '$(Build.SourceBranch)') }}:
         branchName: 'refs/$(GIT_BRANCH_TYPE)/${{ parameters.artifactBranch }}'
       downloadPath: '$(Pipeline.Workspace)/${{ parameters.serviceName }}'
